K8S/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-core-api
  labels:
    app: identity-core-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-core-api
  template:
    metadata:
      labels:
        app: identity-core-api
    spec:
      containers:
      - name: identity-core-api
        image: api:latest
        imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: identity-core-api-service
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: identity-core-api
