K8S/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-core-client
  labels:
    app: identity-core-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-core-client
  template:
    metadata:
      labels:
        app: identity-core-client
    spec:
      containers:
      - name: identity-core-client
        image: client:latest
        imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: identity-core-client-service
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: identity-core-client
