K8S/is4.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-core-is4
  labels:
    app: identity-core-is4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-core-is4
  template:
    metadata:
      labels:
        app: identity-core-is4
    spec:
      containers:
      - name: identity-core-is4
        image: is4:latest
        imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: identity-core-is4-service
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: identity-core-is4
