K8S/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-core-api-ingress
  labels:
    app: identity-core-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - api.local
    - client.local
    - is4.local
    secretName: k8s-tls-secret
  rules:
  - host: api.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: identity-core-api-service
            port:
              number: 443
  - host: client.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: identity-core-client-service
            port:
              number: 443
  - host: is4.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: identity-core-is4-service
            port:
              number: 443
